Fix alignment of removal button

--- a/mediarepo-ui/src/app/pages/home/repositories-tab/repository-card/repository-card.component.scss
+++ b/mediarepo-ui/src/app/pages/home/repositories-tab/repository-card/repository-card.component.scss
@@ -32,3 +32,7 @@
 .status-online {
   background-color: #1b651b;
 }
+
+button.menu-button {
+  float: right;
+}
